# agent-guy

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
agent_guy/: __init__.py
agent_guy/agent/: __init__.py  agent.py  patch.py  turtle.py
agent_guy/executor/: __init__.py  executor.py  random_executor.py  sequential_executor.py
agent_guy/model/: __init__.py  model.py
agent_guy/observer/: __init__.py  observer.py
agent_guy/runner/: __init__.py  runner.py
agent_guy/visitor/: __init__.py  csv_visitor.py  visitor.py
agent_guy/world/: __init__.py  grid.py  world.py
docs/: development.md  gen_ref_pages.py
docs/development/: step1.md  vision.md
nb/: 01_life.ipynb  utils.py
tests/agent/: test_patch.py  test_turtle.py
tests/mocks/: game_of_life.py  mocks.py
tests/model/: test_model.py
tests/runner/: test_runner.py
