[tool.poetry]
name = "agent-guy"
version = "0.0.1"
description = "Agent-based modeling in Python"
authors = ["Laszlo Balo <laszlo.balo@icloud.com>"]
readme = "README.md"
packages = [{include = "agent_guy"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
numpy = "^1.26.1"
pandas = "^2.1.1"
pydantic = "^2.4.2"
dynaconf = "^3.2.3"
hvplot = "^0.9.0"
panel = "^1.3.0"
matplotlib = "^3.8.0"
xarray = "^2023.10.1"
datashader = "^0.16.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
coverage = "^7.3.2"
mypy = "^1.6.1"
mkdocs = "^1.5.3"
livereload = "^2.6.3"
mkdocs-material = "^9.4.6"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-extra-sass-plugin = "^0.1.0"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocs-simple-plugin = "^3.1.0"
mkdocs-multirepo-plugin = "^0.6.3"
mkdocs-glightbox = "^0.3.4"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-autorefs = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.1"
mkdocs-git-authors-plugin = "^0.7.2"
jupyterlab = "^4.0.7"
pyparsing = "^3.1.1"
jupyter-bokeh = "^3.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
